[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow                   = "1.0"
clap                     = { version = "4.2", features = ["derive"] }
url                      = "2.3"
serde                    = { version = "1.0", features = ["derive"] }
serde_json               = "1.0"
methods                  = { path = "../methods" }

# RISC-Zero SDK
risc0-zkvm               = "2.0.2"
risc0-ethereum-contracts = "2.0.2"

# Alloy — enable exactly these features:
alloy = { version = "0.7", features = [
    "network",       # EthereumWallet
    "providers",     # ProviderBuilder
    "signers",       # the `signers` module
    "signer-local",  # the `signers::local` sub-module
    "sol-types",     # the `sol!` macro
    "contract",      # codegen for IVerifier.sol
] }
alloy-primitives         = "0.7"

# Tokio — pull in both macros and the multi-threaded runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Logging
env_logger               = "0.10"
