[package]
name    = "methods"
version = { workspace = true }
edition = { workspace = true }

[build-dependencies]
hex                  = "0.4"
risc0-build          = "2.1.1"
risc0-build-ethereum = "2.1.0"
risc0-zkp            = "2.0.1"

[dev-dependencies]
alloy-primitives     = "0.4"
alloy-sol-types      = "0.2"
risc0-zkvm           = { version = "=2.0.2", features = ["client"] }

[package.metadata.risc0]
methods = ["guest"]
