[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20.0", default-features = false }
risc0-zkvm-platform = { version = "0.20.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
tlsn-core = "0.1.0"

[profile.release]
lto = "thin"
