[package]
name = "guest"
version = "0.1.0"
edition = "2021"


[dependencies]
risc0-zkvm            = { version = "=2.0.2", default-features = false }
risc0-zkvm-platform   = { version = "=2.0.2", features = ["rust-runtime", "export-getrandom", "sys-getenv"] }
serde                 = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode               = { version = "1.3", default-features = false }
hex                   = { version = "0.4", default-features = false }
tlsn-core             = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-core", tag = "v0.1.0-alpha.9", default-features = false }
p256                  = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic", "alloc"] }
serde_json            = { version = "1.0", default-features = false, features = ["alloc"] }

getrandom           = { version = "0.2.7", default-features = false, features = ["custom"] }

[features]
default = ["std"]
std     = ["risc0-zkvm/std", "serde/std", "p256/std", "serde_json/std", "hex/std"]

 [build-dependencies]
risc0-build          = "2.0.2"
risc0-build-ethereum = { workspace = true }

